--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">KHALID'S's REPAIR Solution.</h5>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">KHALID's REPAIR Solution.</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">#1 Place For Your <span class="text-primary">Electronic</span> Repair</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">We do all types of repairs from smartphone reapir to CCTV installations and maintenance.</p>
                                 <a href="#service" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Services</a>
